[package]
name = "pixivcrab"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
snafu = "0.6"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
